--- a/index.html
+++ b/index.html
@@ -3,8 +3,14 @@
 <html>
   <head>
     <title>My Website Name</title>
+    <script type="text/javascript" src="function.js"></script>
   </head>
   <body>
-    Hello, World!
+    <button onclick="HelloConsole()">Hello, Console</button>
+    <button onclick="popup()">Hello, Pop-up</button>
+    <button onclick="browser()">Hello, Browser</button>
+    <p id="hello"></p>
+    <button onclick="stranger()">Hello, Stranger</button>
+    <p id="helloname"></p>
   </body>
 </html>
